--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <nav>
             <div class="logo">Sippline</div>
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="">Shop</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="">Blogs</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
             <button class="buy-now">Buy Now</button>
@@ -34,4 +34,5 @@
         </div>
     </main>
 </body>
+
 </html>
